# IceCat-2

./: README.md  load_icetray.sh  pyproject.toml
docs/: AlertsList_tot.csv  AlertsList_tot.txt  README  alerts_i3live.csv  alerts_i3live.txt  alerts_no_i3live.csv  alerts_no_i3live.txt  amon_table_EHE_events.txt  amon_table_HESE_events.txt  amon_table_gold_bronze.txt  area_icecat1_from_fits.txt  area_icecat2_from_pkl.txt  division_LED_HED_i3live_events.csv  division_LED_HED_i3live_events.txt  division_LED_HED_old_events.csv  division_LED_HED_old_events.txt  extracted_upd_alert_info_reco_0.csv  extracted_upd_alert_info_reco_1.csv  first_reco.txt  output_reco.csv  output_reco_nopass2.csv  output_reco_pass2.csv  scans_completed_i3live_evts.txt  scans_completed_i3live_evts_pass2.txt  scans_completed_old_evts.txt  scans_completed_old_evts_pass2.txt  table_rev0.txt  vetod_events_icecat1.txt
icecat_2/: add_truncated_energy_i3files.py  add_truncated_energy_i3files.py~  alerts_map.py  alerts_map_compare_new_old.py  calculate_signalness.py  check_areas_pkl_fits.py  check_files.py  check_scans.py  check_subevt.py  compute_contour_areas.py  compute_upd_nuE_signalness.py  config.py  example_code.py  extract_reco_output.py  get_truncated_energy_orig.py  i3file_retriever.py  launch_scans.py  launch_scans_from_list.py  plotting_compare_reco.py  plotting_functions.py  plotting_utilities.py  reco_outputs.py  reco_outputs_from_list.py  reco_outputs_test.py  test_i3live_events_pass2.py  test_old_events.py  test_old_events_pass2.py  test_single_event_old.py  test_single_event_pass2.py
(+20 files in other folders)
