[tool.poetry]
name = "IceCat-2"
version = "0.0.0"
description = "IceCat-2"
authors = ["Giacomo Sommani <sommani@astro.ruhr-uni-bochum.de>", "Nora Valtonen-Mattila <nora.valtonen-mattila@icecube.wisc.edu>", "Angela Zegarelli <azegarelli@icecube.wisc.edu>"]
readme = "README.md"
packages = [{include = "icecat-2", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
skymist = { git = "git@github.com:icecube/skymist.git", branch = "main" }

[tool.poetry.group.listener.dependencies]
slack-sdk = "^3.26.1"
